# caikaifaai

./: .cspell.json  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEMAP.md  CODE_MAP.md  Dockerfile  Dockerfile.ptc  Justfile  NOTES.md  QUICKSTART.md  README.md  __init__.py  cli.py  cli_debug.py  config.py  coverage.xml  dashboard.html  dev_orchestrator.py  docker-compose.yml  just  pyproject.toml  run_dashboard.py  run_telegram.py  setup-ai-env.ps1  tasks.json  test_debug.db-shm  verify_council.py  文档.md  项目开发文档.md
.claude/: settings.json  settings.local.json
.council/: AGENTS.md  BRIEF.md  CHECKLIST.md  CLAUDE.md  CODEX.md  CONTRACTS.md  DECISIONS.md  GEMINI.md  MCP_BEST_PRACTICES.md  MCP_PHILOSOPHY.md  NOTES.md  SOP.md  SPEC.md  TOKEN_SAVING_PRACTICES.md  ledger.json  ledger_archive_20251226_001654.json  ledger_archive_20251226_004433.json  permissions.json  playbook.db  test_checkpoints.db  token_vault.json  tool_registry.json  wald_state.json
.serena/: project.yml
agents/: architect.py  base_agent.py  coder.py  coder_hub.py  observability.py  orchestrator.py  qa_hub.py  reviewer.py
config/: mcp_user_config.template.json  models.yaml
context/: auto_compact.py  gemini_cache.py  rolling_context.py
council/: __init__.py  cli.py  dev_orchestrator.py  exceptions.py  simple_agent.py
distributed/: __init__.py
doc/: 2025_AGENT_BEST_PRACTICES.md  2025_MULTI_AGENT_COMPLETE_GUIDE.md  CODE_MAP_2025.md  COUNCIL_AUDIT_REPORT.md  GOVERNANCE_BEST_PRACTICES.md  UPGRADE_PROGRESS_2025_12_31.md  progress.md
docs/: ARCHITECTURE_SPEC.md  DOCKER_SANDBOX.md  HOOKS_GUIDE.md  PLUGINS_MINIMAL.md  STRATEGIC_RECOMMENDATION.md  STRONGEST_AGENT_ANALYSIS.md  WORKFLOW.md  mcp.meta.json  progress_hooks_2026_01_01.md  progress_skill2026_2026_01_02.md  v1.0.0_BEST_PRACTICES.md
examples/: basic_agent.py  hello_agent.py  research_agent.py  streaming_demo.py
facilitator/: __init__.py  shadow_facilitator.py
governance/: __init__.py  constitution.py  gateway.py
mcp/: __init__.py  monitor.py  protocol.py  tool_executor.py
memory/: rag_retriever.py  vector_memory.py
observability/: __init__.py  logger.py  token_tracker.py
orchestration/: __init__.py  agent_registry.py  blast_radius.py  events.py  task_classifier.py
persistence/: checkpointer.py  redis_store.py  state_store.py
playground/: index.html  script.js  styles.css
prompts/: __init__.py
protocol/: __init__.py  schema.py
sandbox/: runner.py
scripts/: __init__.py  audit_gemini.sh  batch_replace.py  bootstrap_mcp.py  build_sandbox_image.sh  check_deps.py  codemap.py  codemap.sh  codify_routine.py  context_manager.py  council_bootstrap.sh  council_run.py  demo_cache.py  dispatch_swarm.py  facilitator.py  fix_agent_lint.py  fix_lint_v2.py  fix_lint_v3.py  generate_council_docs.py  generate_docs_v2.py  graph_builder.py  impl_gemini.sh  knowledge_base.py  mcp_guard.py  mcp_memory_server.py  plan_claude.sh  plan_codex.sh  prototype_playwright_send.py  ptc_decision_gate_update.py  ptc_distributed_compose_update.py  ptc_distributed_update.py  ptc_runner.py  ptc_sdk.py  ptc_v2_autofix.py  quickstart.sh  setup_api_keys.py  simulate.py  start_council_server.py  tdd_gemini.sh  (+11 more)
(+374 files in other folders)
