[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesi-council"
version = "1.0.0"
description = "Multi-Agent Council Framework for AGI Development"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "CESI Team"}
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "networkx>=3.2.0",
    "pre-commit>=3.6.0",
    "commitizen>=4.1.0",
]

council = [
    "google-generativeai>=0.6.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "litellm>=1.0.0",
    "PyYAML>=6.0",
]

enhancements = [
    "chromadb>=0.4",
    "aiosqlite>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

distributed = [
    "celery>=5.3",
    "redis>=5.0",
]

all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "networkx>=3.2.0",
    "google-generativeai>=0.6.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "chromadb>=0.4",
    "aiosqlite>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "celery>=5.3",
    "redis>=5.0",
]

[project.scripts]
council = "council.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".agent",
    ".claude",
    ".council",
    ".codex",
    ".codex_home",
    "swarm",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402", "E722", "E741", "F821"]

[tool.ruff.lint.isort]
known-first-party = ["src", "council"]

[tool.setuptools.packages.find]
where = ["."]
include = ["council*", "src*"]
